Episode 3: Lists, Conditionals, and Computed Properties
Notice the HTML duplication and method names with compound words. We'll solve both of those issues in episode 4.
https://laracasts.com/series/learn-vue-3-step-by-step/episodes/3
https://gist.github.com/JeffreyWay/5ecd3f5dad31b7ea3027edcf4834ccab

--- a/index.html
+++ b/index.html
@@ -1,51 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <title>Episode 2: Attribute Binding and Basic Events</title>
+    <title>Episode 3: Lists and Computed Properties</title>
     <script src="https://unpkg.com/vue@3"></script>
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
-
-      body {
-        display: grid;
-        place-items: center;
-      }
-
-      .text-red {
-        color: red;
-      }
-
-      .text-green {
-        color: green;
-      }
-    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body>
+  <body class="h-full grid place-items-center">
     <div id="app">
-      <button :class="active ? 'text-red' : 'text-green'" @click="toggle">
-        Click Me
-      </button>
+      <section v-show="inProgressAssignments.length">
+        <h2 class="font-bold mb-2">In Progress</h2>
+
+        <ul>
+          <li v-for="assignment in inProgressAssignments" :key="assignment.id">
+            <label>
+              {{ assignment.name }}
+
+              <input type="checkbox" v-model="assignment.complete" />
+            </label>
+          </li>
+        </ul>
+      </section>
+
+      <section v-show="completedAssignments.length" class="mt-8">
+        <h2 class="font-bold mb-2">Completed</h2>
+
+        <ul>
+          <li v-for="assignment in completedAssignments" :key="assignment.id">
+            <label>
+              {{ assignment.name }}
+
+              <input type="checkbox" v-model="assignment.complete" />
+            </label>
+          </li>
+        </ul>
+      </section>
     </div>
 
     <script>
-      Vue.createApp({
+      let app = {
         data() {
           return {
-            active: false,
+            assignments: [
+              { name: "Finish project", complete: false, id: 1 },
+              { name: "Read Chapter 4", complete: false, id: 2 },
+              { name: "Turn in Homework", complete: false, id: 3 },
+            ],
           };
         },
 
-        methods: {
-          toggle() {
-            this.active = !this.active;
+        computed: {
+          inProgressAssignments() {
+            return this.assignments.filter(
+              (assignment) => !assignment.complete
+            );
+          },
+
+          completedAssignments() {
+            return this.assignments.filter((assignment) => assignment.complete);
           },
         },
-      }).mount("#app");
+      };
+
+      Vue.createApp(app).mount("#app");
     </script>
   </body>
 </html>
