--- a/index.html
+++ b/index.html
@@ -2,63 +2,34 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <title>Episode 3: Lists and Computed Properties</title>
+    <title>Episode 4: Your First Custom Vue Component</title>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
   <body class="h-full grid place-items-center">
     <div id="app">
-      <section v-show="inProgressAssignments.length">
-        <h2 class="font-bold mb-2">In Progress</h2>
-
-        <ul>
-          <li v-for="assignment in inProgressAssignments" :key="assignment.id">
-            <label>
-              {{ assignment.name }}
-
-              <input type="checkbox" v-model="assignment.complete" />
-            </label>
-          </li>
-        </ul>
-      </section>
-
-      <section v-show="completedAssignments.length" class="mt-8">
-        <h2 class="font-bold mb-2">Completed</h2>
-
-        <ul>
-          <li v-for="assignment in completedAssignments" :key="assignment.id">
-            <label>
-              {{ assignment.name }}
-
-              <input type="checkbox" v-model="assignment.complete" />
-            </label>
-          </li>
-        </ul>
-      </section>
+      <app-button>Submit</app-button>
     </div>
 
     <script>
       let app = {
-        data() {
-          return {
-            assignments: [
-              { name: "Finish project", complete: false, id: 1 },
-              { name: "Read Chapter 4", complete: false, id: 2 },
-              { name: "Turn in Homework", complete: false, id: 3 },
-            ],
-          };
-        },
+        components: {
+          "app-button": {
+            template: `
+                        <button
+                            class="bg-gray-200 hover:bg-gray-400 border rounded px-5 py-2 disabled:cursor-not-allowed"
+                            :disabled="processing"
+                        >
+                            <slot />
+                        </button>
+                    `,
 
-        computed: {
-          inProgressAssignments() {
-            return this.assignments.filter(
-              (assignment) => !assignment.complete
-            );
-          },
-
-          completedAssignments() {
-            return this.assignments.filter((assignment) => assignment.complete);
+            data() {
+              return {
+                processing: false,
+              };
+            },
           },
         },
       };
