--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <title>Episode 4: Your First Custom Vue Component</title>
+    <title>Episode 5: Extract Components to Their Own Files</title>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
@@ -12,25 +12,12 @@
       <app-button>Submit</app-button>
     </div>
 
-    <script>
+    <script type="module">
+      import AppButton from "./js/components/AppButton.js";
+
       let app = {
         components: {
-          "app-button": {
-            template: `
-                        <button
-                            class="bg-gray-200 hover:bg-gray-400 border rounded px-5 py-2 disabled:cursor-not-allowed"
-                            :disabled="processing"
-                        >
-                            <slot />
-                        </button>
-                    `,
-
-            data() {
-              return {
-                processing: false,
-              };
-            },
-          },
+          "app-button": AppButton,
         },
       };
 
