--- a/index.html
+++ b/index.html
@@ -2,26 +2,47 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <title>Episode 5: Extract Components to Their Own Files</title>
+    <title>Episode 6: Component Props</title>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      @keyframes spinner {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      .is-loading {
+        color: transparent;
+      }
+
+      .is-loading:before {
+        content: "";
+        box-sizing: border-box;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 20px;
+        height: 20px;
+        margin-top: -10px;
+        margin-left: -10px;
+        border-radius: 50%;
+        border: 2px solid #ccc;
+        border-top-color: #000;
+        animation: spinner 0.6s linear infinite;
+      }
+    </style>
   </head>
 
   <body class="h-full grid place-items-center">
     <div id="app">
-      <app-button>Submit</app-button>
+      <app-button :processing="true">Submit</app-button>
     </div>
 
     <script type="module">
-      import AppButton from "./js/components/AppButton.js";
+      import App from "./js/components/App.js";
 
-      let app = {
-        components: {
-          "app-button": AppButton,
-        },
-      };
-
-      Vue.createApp(app).mount("#app");
+      Vue.createApp(App).mount("#app");
     </script>
   </body>
 </html>
