--- a/index.html
+++ b/index.html
@@ -2,42 +2,13 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <title>Episode 6: Component Props</title>
+    <title>Episode 7: Bring it All Together</title>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      @keyframes spinner {
-        to {
-          transform: rotate(360deg);
-        }
-      }
-
-      .is-loading {
-        color: transparent;
-      }
-
-      .is-loading:before {
-        content: "";
-        box-sizing: border-box;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 20px;
-        height: 20px;
-        margin-top: -10px;
-        margin-left: -10px;
-        border-radius: 50%;
-        border: 2px solid #ccc;
-        border-top-color: #000;
-        animation: spinner 0.6s linear infinite;
-      }
-    </style>
   </head>
 
   <body class="h-full grid place-items-center">
-    <div id="app">
-      <app-button :processing="true">Submit</app-button>
-    </div>
+    <div id="app"></div>
 
     <script type="module">
       import App from "./js/components/App.js";
