--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <title>Episode 7: Bring it All Together</title>
+    <title>Episode 8: Handle a Form Submission</title>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="h-full grid place-items-center">
+  <body class="h-full grid place-items-center bg-gray-800 text-white">
     <div id="app"></div>
 
     <script type="module">
